--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-controller="ToDos" asp-action="Index">Zadatci</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-controller="Comments" asp-action="Index">Komentari</a></li>
+                                @*<li><a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Korisnici</a></li>*@
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
