--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">To Do</h1>
+    <h2>Dobrodošli</h2>
+</div>
+<div class="text-left">
+    <h3>Admin stranice:</h3>
+    <ul>
+        <li><a class="text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="ToDos" asp-action="Index">Zadatci</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="Comments" asp-action="Index">Komentari</a></li>
+    </ul>
 </div>
