--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ToDoList.styles.css" asp-append-version="true" />
+    <link href="~/lib/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -25,18 +26,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
+@*                        <li class="nav-dropdown">
+                            <a class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a></li>
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="ToDos" asp-action="Index">Zadatci</a></li>
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Comments" asp-action="Index">Komentari</a></li>
-                                @*<li><a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Korisnici</a></li>*@
+                                @*<li><a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Korisnici</a></li>
                             </ul>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -56,6 +54,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/lib/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="~/lib/bootstrap-select/dist/js/i18n/defaults-hr_HR.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
