--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -7,10 +7,13 @@
     <h2>Dobrodošli</h2>
 </div>
 <div class="text-left">
-    <h3>Admin stranice:</h3>
+    <h3>Admin stranice (dodatno):</h3>
     <ul>
         <li><a class="text-dark" asp-area="" asp-controller="Topics" asp-action="Index">Teme</a></li>
         <li><a class="text-dark" asp-area="" asp-controller="ToDos" asp-action="Index">Zadatci</a></li>
         <li><a class="text-dark" asp-area="" asp-controller="Comments" asp-action="Index">Komentari</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="UserDatas" asp-action="Index">Korisnici</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="PersonalDatas" asp-action="Index">Korisnički podatci</a></li>
+
     </ul>
 </div>
