--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -17,9 +17,6 @@
     </ul>
 </div>
 <div class="text-left">
-    <h3>List Viewovi:</h3>
-    <ul>
-        <li>/toDosByUser/ime_korisnika</li>
-    </ul>
+    @{await Html.RenderPartialAsync("_Used_routes");}
 </div>
 
