--- a/ToDoList/Views/Comments/Create.cshtml
+++ b/ToDoList/Views/Comments/Create.cshtml
@@ -22,6 +22,10 @@
                 <select asp-for="ToDoID" class ="form-control" asp-items="ViewBag.ToDoID"></select>
             </div>
             <div class="form-group">
+                <label asp-for="UserID" class="control-label"></label>
+                <select asp-for="UserID" class ="form-control" asp-items="ViewBag.UserID"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
