--- a/ToDoList/Views/Comments/Edit.cshtml
+++ b/ToDoList/Views/Comments/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="ToDoID" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UserID" class="control-label"></label>
+                <select asp-for="UserID" class="form-control" asp-items="ViewBag.UserID"></select>
+                <span asp-validation-for="UserID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
