--- a/ToDoList/Templates/ViewGenerator/List.cshtml
+++ b/ToDoList/Templates/ViewGenerator/List.cshtml
@@ -105,7 +105,7 @@ string b = Model.ViewDataTypeShortName;
 @:<link rel="stylesheet" href="~/lib/datatables/Editor-2.0.5/css/editor.bootstrap4.min.css" />
 @:
 <script>
-    var Data = @@Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.@(Model.ViewDataTypeName)));
+    var Data = @@Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.@(Model)));
     var Table = $('#tablica');
 
     var detailsIcon = 'Detalji';
