--- a/ToDoList/Views/UserDatas/Edit.cshtml
+++ b/ToDoList/Views/UserDatas/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonalDataID" class="control-label"></label>
-                <select asp-for="PersonalDataID" class="form-control" asp-items="ViewBag.PersonalDataID"></select>
-                <span asp-validation-for="PersonalDataID" class="text-danger"></span>
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
