--- a/ToDoList/Templates/ViewGenerator/List.cshtml
+++ b/ToDoList/Templates/ViewGenerator/List.cshtml
@@ -148,7 +148,7 @@ string b = Model.ViewDataTypeShortName;
                             @:            var a = moment(data).format('DD.MM.YYYY.');
                             @:            if (a == 'Invalid date')
                             @:            {
-                            @:                a = nulll;
+                            @:                a = null;
                             @:            }
                             @:            return a;
                             @:        }
