--- a/ToDoList/Views/App_ToDoes/Edit.cshtml
+++ b/ToDoList/Views/App_ToDoes/Edit.cshtml
@@ -20,18 +20,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CompletedDate" class="control-label"></label>
-                <input asp-for="CompletedDate" class="form-control" />
-                <span asp-validation-for="CompletedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TopicID" class="control-label"></label>
