--- a/ToDoList/Templates/ViewGenerator/List.cshtml
+++ b/ToDoList/Templates/ViewGenerator/List.cshtml
@@ -126,7 +126,7 @@ string b = Model.ViewDataTypeShortName;
             data: tableData,
             columns: [
                 {
-                    data: 'ID',
+                    data: 'Id',
                     visible: false
                 },
                 @{ foreach (var item in Model.ModelMetadata.ModelType.GetProperties())
