--- a/ToDoList/Views/Shared/_Used_routes.cshtml
+++ b/ToDoList/Views/Shared/_Used_routes.cshtml
@@ -2,5 +2,5 @@
 <ul>
     <li>/TODO/toDosByUser/ime_korisnika</li>
     <li><a href="/TODO/Topics">/TODO/Topics</a></li>
-    <li><a href="/TODO/UserData">/TODO/UserData</a></li>
+    @*<li><a href="/TODO/UserData">/TODO/UserData</a></li>*@
 </ul>
