--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="App_ToDoes" asp-action="Index">Zadaci</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privatnost</a>
                         </li>
 @*                        <li class="nav-dropdown">
                             <a class="dropdown-toggle nav-link text-dark" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
