--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="App_ToDoes" asp-action="Index">Zadaci</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="App_Topics" asp-action="Index">Teme</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
                         </li>
                         <li class="nav-item">
