--- a/ToDoList/Views/App_UserData/Edit.cshtml
+++ b/ToDoList/Views/App_UserData/Edit.cshtml
@@ -14,6 +14,7 @@
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled/>
+                <input asp-for="Username" class="form-control" hidden />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -22,9 +23,9 @@
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FirstName"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="LastName"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DOB"></label>
@@ -50,7 +51,7 @@
             <button id="update-profile-button" type="submit" class="btn btn-primary" asp-route="Input.Id">Spremi</button>
         </form>
         <br />
-        <a href="../Korisnici">Povratak na listu</a>
+        <a href='javascript:history.go(-1)'>Povratak</a>
     </div>
 </div>
 
